# dart_scripts_cmake

./: .gitignore  CMakeLists.txt  pubspec.yaml
lib/: sample_extension.cc  sample_extension.dart
